k8s/album-go-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: album-go-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/album-go-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/album-go-default: "true"
